--- a/scripts/uav_application/config/config1.properties
+++ b/scripts/uav_application/config/config1.properties
@@ -1,30 +1,22 @@
-#default config file
+#The new config file
+#Wed Aug 15 14:04:35 CST 2018
 simulation_time=20
 warm_up_period=3
 vm_load_check_interval=0.1
 vm_location_check_interval=0.1
 file_log_enabled=true
 deep_file_log_enabled=true
-
 min_number_of_mobile_devices=2
 max_number_of_mobile_devices=2
 mobile_device_counter_size=1
-
 wan_propogation_delay=0.1
 lan_internal_delay=0.005
 wlan_bandwidth=200
 wan_bandwidth=15
 gsm_bandwidth=10
-
 mips_for_cloud=20000
-
-#use ',' for multiple values
-orchestrator_policies=NEXT_FIT,BEST_FIT
-
-#use ',' for multiple values
+orchestrator_policies=NEXT_FIT
 simulation_scenarios=TWO_TIER
-
-#mean waiting time in seconds
 attractiveness_L1_mean_waiting_time=500
 attractiveness_L2_mean_waiting_time=300
 attractiveness_L3_mean_waiting_time=120
